chore: Update dependencies (#17)
Co-authored-by: Your name <you@example.com>